Arraylist_Methods/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\conce\Desktop\APCS Course Folder\Unit 6\Assignments\Arraylist_Methods
-d
C:\Users\conce\Desktop\APCS Course Folder\Unit 6\Assignments\Arraylist_Methods\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\conce\Desktop\APCS Course Folder\Unit 6\Assignments\Arraylist_Methods\Methods.java
<---- end of javadoc command ---->
Loading source file C:\Users\conce\Desktop\APCS Course Folder\Unit 6\Assignments\Arraylist_Methods\Methods.java...
C:\Users\conce\Desktop\APCS Course Folder\Unit 6\Assignments\Arraylist_Methods\Methods.java:69: error: <identifier> expected
    public String 
                 ^
1 error
